--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "prettier",
-    "prettier-react"
+    "prettier/react"
   ],
   "parserOptions": {
     "ecmaFeatures": {
@@ -17,6 +17,6 @@
     "ecmaVersion": 11,
     "sourceType": "module"
   },
-  "plugins": ["react", "react-hooks", "prettier"],
+  "plugins": ["react", "react-hooks"],
   "rules": {}
 }
