--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-react": "^7.21.4",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "prettier": "2.1.2"
   }
 }
